// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Customer Orders Order Review renders connected component 1`] = `
<Provider
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(OrderReview)
    isFetching={false}
    user={
      Object {
        "email": "emiola@olasanmi.com",
        "firstname": "Emiola",
        "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
        "lastname": "Olasanmi",
        "role": "customer",
      }
    }
  >
    <OrderReview
      isFetching={false}
      logout={[Function]}
      user={
        Object {
          "email": "emiola@olasanmi.com",
          "firstname": "Emiola",
          "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
          "lastname": "Olasanmi",
          "role": "customer",
        }
      }
    >
      <View
        isFetching={false}
        logout={[Function]}
        showTime={true}
        type="orderReview"
        updateCurrentDate={null}
        user={
          Object {
            "email": "emiola@olasanmi.com",
            "firstname": "Emiola",
            "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
            "lastname": "Olasanmi",
            "role": "customer",
          }
        }
      >
        <div
          className="user"
        >
          <Header
            active="orderReview"
            dateType="orderReview"
            logout={[Function]}
            showTime={true}
            type="customer"
            updateCurrentDate={null}
            user={
              Object {
                "email": "emiola@olasanmi.com",
                "firstname": "Emiola",
                "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                "lastname": "Olasanmi",
                "role": "customer",
              }
            }
          >
            <div
              className="header"
            >
              <div
                className="navbar white-navbar"
              >
                <CustomerHeader
                  active="orderReview"
                  dateType="orderReview"
                  logout={[Function]}
                  showTime={true}
                  type="customer"
                  updateCurrentDate={null}
                  user={
                    Object {
                      "email": "emiola@olasanmi.com",
                      "firstname": "Emiola",
                      "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                      "lastname": "Olasanmi",
                      "role": "customer",
                    }
                  }
                >
                  <div
                    className="page-title"
                  >
                    <h3>
                      <Link
                        replace={false}
                        to="/"
                      >
                        <a
                          href="/"
                          onClick={[Function]}
                        >
                          BOOK-A-MEAL
                        </a>
                      </Link>
                    </h3>
                  </div>
                  <div
                    className="navlinks"
                  >
                    <h3>
                      Welcome, 
                      Emiola
                    </h3>
                    <Link
                      className="false"
                      replace={false}
                      to="/"
                    >
                      <a
                        className="false"
                        href="/"
                        onClick={[Function]}
                      >
                        Menu
                      </a>
                    </Link>
                    <Link
                      className="false"
                      replace={false}
                      to="/orders"
                    >
                      <a
                        className="false"
                        href="/orders"
                        onClick={[Function]}
                      >
                        Orders
                      </a>
                    </Link>
                    <Link
                      onClick={[Function]}
                      replace={false}
                      to="/"
                    >
                      <a
                        href="/"
                        onClick={[Function]}
                      >
                        Logout
                      </a>
                    </Link>
                    <div
                      className="user-info mobile-only"
                    >
                      <Dropdown
                        content={
                          <UNDEFINED>
                            <Link
                              className="false"
                              replace={false}
                              to="/"
                            >
                              Menu
                            </Link>
                            <Link
                              className="false"
                              replace={false}
                              to="/orders"
                            >
                              Orders
                            </Link>
                            <Link
                              onClick={[Function]}
                              replace={false}
                              to="/"
                            >
                              Logout
                            </Link>
                          </UNDEFINED>
                        }
                        toggler={
                          <div
                            className="user-dropdown"
                          >
                            <div
                              className="username-circle circle-click"
                            >
                              <p
                                className="circle-click"
                              >
                                E
                              </p>
                            </div>
                            <span>
                              ▾
                            </span>
                          </div>
                        }
                        type="customer"
                      >
                        <div
                          className="dropdown"
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          <Link
                            className="link"
                            clickHandler={null}
                            dataTip={null}
                            id="dropdown-toggler"
                          >
                            <button
                              className="link-btn link"
                              data-tip={null}
                              id="dropdown-toggler"
                              onClick={null}
                            >
                              <div
                                className="user-dropdown"
                              >
                                <div
                                  className="username-circle circle-click"
                                >
                                  <p
                                    className="circle-click"
                                  >
                                    E
                                  </p>
                                </div>
                                <span>
                                  ▾
                                </span>
                              </div>
                            </button>
                          </Link>
                          <div
                            className="dropdown-content"
                            id="dropdown-content"
                          >
                            <Link
                              className="false"
                              replace={false}
                              to="/"
                            >
                              <a
                                className="false"
                                href="/"
                                onClick={[Function]}
                              >
                                Menu
                              </a>
                            </Link>
                            <Link
                              className="false"
                              replace={false}
                              to="/orders"
                            >
                              <a
                                className="false"
                                href="/orders"
                                onClick={[Function]}
                              >
                                Orders
                              </a>
                            </Link>
                            <Link
                              onClick={[Function]}
                              replace={false}
                              to="/"
                            >
                              <a
                                href="/"
                                onClick={[Function]}
                              >
                                Logout
                              </a>
                            </Link>
                          </div>
                        </div>
                      </Dropdown>
                      <p>
                          
                        Emiola
                      </p>
                    </div>
                  </div>
                </CustomerHeader>
              </div>
            </div>
          </Header>
          <div
            className="main-wrapper"
            id="has-modal"
          >
            <div
              className="order-confirmation"
            >
              <div>
                <h2>
                  Delivery Details
                </h2>
                <hr />
                <div
                  className="delivery-details"
                >
                  <p
                    className="text-center"
                    style={
                      Object {
                        "marginBottom": "30px",
                      }
                    }
                  >
                    Please fill in your details below. This is only required once.
                  </p>
                  <RenderInput
                    handleBlur={[Function]}
                    handleChange={[Function]}
                    handleFocus={[Function]}
                    id="deliveryPhoneNo"
                    label="Phone Number (in the format 080xxxxxxxx)"
                    meta={
                      Object {
                        "error": null,
                        "touched": true,
                      }
                    }
                    name="deliveryPhoneNo"
                    placeholder=""
                    required={true}
                    type="tel"
                    value=""
                  >
                    <div
                      className="form-input"
                    >
                      <label
                        htmlFor="deliveryPhoneNo"
                        onClick={[Function]}
                      >
                        Phone Number (in the format 080xxxxxxxx)
                        <span
                          className="danger"
                        >
                          *
                        </span>
                      </label>
                      <input
                        className="is-valid"
                        id="deliveryPhoneNo"
                        name="deliveryPhoneNo"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        pattern="[0-9]{4}[0-9]{3}[0-9]{4}"
                        placeholder=""
                        type="tel"
                        value=""
                      />
                    </div>
                  </RenderInput>
                  <RenderInput
                    handleBlur={[Function]}
                    handleChange={[Function]}
                    handleFocus={[Function]}
                    id="deliveryAddress"
                    label="Delivery Address"
                    meta={
                      Object {
                        "error": null,
                        "touched": true,
                      }
                    }
                    name="deliveryAddress"
                    placeholder=""
                    required={true}
                    type="textarea"
                    value=""
                  >
                    <div
                      className="form-input"
                    >
                      <label
                        htmlFor="deliveryAddress"
                        onClick={[Function]}
                      >
                        Delivery Address
                        <span
                          className="danger"
                        >
                          *
                        </span>
                      </label>
                      <input
                        className="is-valid"
                        id="deliveryAddress"
                        name="deliveryAddress"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        placeholder=""
                        type="textarea"
                        value=""
                      />
                    </div>
                  </RenderInput>
                </div>
                <div
                  className="control-btns"
                >
                  <Link
                    replace={false}
                    to="/"
                  >
                    <a
                      href="/"
                      onClick={[Function]}
                    >
                      <button
                        className="btn btn-sec"
                        type="button"
                      >
                        Back
                      </button>
                    </a>
                  </Link>
                  <button
                    className="btn btn-sec"
                    onClick={[Function]}
                    type="submit"
                  >
                    Next
                  </button>
                </div>
              </div>
            </div>
          </div>
          <Connect(Modal)
            isFetching={false}
            logout={[Function]}
            showTime={true}
            type="orderReview"
            updateCurrentDate={null}
            user={
              Object {
                "email": "emiola@olasanmi.com",
                "firstname": "Emiola",
                "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                "lastname": "Olasanmi",
                "role": "customer",
              }
            }
          >
            <Modal
              isFetching={false}
              logout={[Function]}
              open={false}
              showTime={true}
              toggleModal={[Function]}
              type={null}
              updateCurrentDate={null}
              user={
                Object {
                  "email": "emiola@olasanmi.com",
                  "firstname": "Emiola",
                  "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
                  "lastname": "Olasanmi",
                  "role": "customer",
                }
              }
            />
          </Connect(Modal)>
          <Footer>
            <div
              className="footer"
            >
              <p>
                © 2018. Iveren Shaguy. All images were gotten from the internet and are not mine.
              </p>
            </div>
          </Footer>
        </div>
      </View>
    </OrderReview>
  </Connect(OrderReview)>
</Provider>
`;

exports[`Customer Orders Order Review renders correctly 1`] = `
<View
  isFetching={false}
  logout={[MockFunction]}
  showTime={true}
  type="orderReview"
  updateCurrentDate={null}
  user={
    Object {
      "email": "emiola@olasanmi.com",
      "firstname": "Emiola",
      "id": "a09a5570-a3b2-4e21-94c3-5cf483dbd1ac",
      "lastname": "Olasanmi",
      "role": "customer",
    }
  }
>
  <div
    className="order-confirmation"
  >
    <div>
      <h2>
        Delivery Details
      </h2>
      <hr />
      <div
        className="delivery-details"
      >
        <p
          className="text-center"
          style={
            Object {
              "marginBottom": "30px",
            }
          }
        >
          Please fill in your details below. This is only required once.
        </p>
        <React.Fragment>
          <RenderInput
            handleBlur={[Function]}
            handleChange={[Function]}
            handleFocus={[Function]}
            id="deliveryPhoneNo"
            label="Phone Number (in the format 080xxxxxxxx)"
            meta={
              Object {
                "error": null,
                "touched": true,
              }
            }
            name="deliveryPhoneNo"
            placeholder=""
            required={true}
            type="tel"
            value=""
          />
          <RenderInput
            handleBlur={[Function]}
            handleChange={[Function]}
            handleFocus={[Function]}
            id="deliveryAddress"
            label="Delivery Address"
            meta={
              Object {
                "error": null,
                "touched": true,
              }
            }
            name="deliveryAddress"
            placeholder=""
            required={true}
            type="textarea"
            value=""
          />
        </React.Fragment>
      </div>
      <div
        className="control-btns"
      >
        <Link
          replace={false}
          to="/"
        >
          <button
            className="btn btn-sec"
            type="button"
          >
            Back
          </button>
        </Link>
        <button
          className="btn btn-sec"
          onClick={[Function]}
          type="submit"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</View>
`;
